[package]
name = "bundlerbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#sever
bytemuck = "1.15.0"
tokio-native-tls = "0.3.1"
actix-web = { version = "4.5.1", features = ["openssl"] }
openssl = "0.10.64"
actix-cors = "0.7.0"
#solana
solana-client = "1.17.20"
solana-sdk = "1.17.20"
solana-transaction-status = "1.17.20"
solana-program = "1.17.20"
solana-account-decoder = "1.17.20"
solana-metrics = "1.17.20"

#spl
spl-associated-token-account = "2.2.0"
spl-token = "4.0.0"
spl-token-client = "0.8.0"
solana-address-lookup-table-program = "1.17.20"

#serum
serum_dex = "0.5.4"

mpl-token-metadata = { version = "3.1.0", features = ["serde"] }
#tokio
eyre = "0.6.11"
tokio = { version = "1.35.1", features = ["full"] }
hex = "0.4.3"

#serde
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.108"
serde_qs = "0.12.0"

#base64
base64 = "0.21.5"
bincode = "1.3.3"
futures = "0.3.15"

maplit = "1.0.2"
lazy_static = "1.4.0"

once_cell = "1.8.0"
#reqwest
reqwest = { version = "0.11.23", features = ["json"] }
regex = "1.10.3"
log = "0.4.20"
futures-util = "0.3"

pretty_env_logger = "0.5.0"
demand = "1.2.2"
keyauth = "1.2.0"
semver = "1.0.23"

colorize = "0.1.0"
arrayref = "0.3.7"
csv = "1.3.0"
safe-transmute = "0.11.2"

termcolor = "1.4.1"
yellowstone-grpc-proto = { path = "./clients/yellowstone-grpc-proto" }
jito-protos = { path = "./clients/jito_protos" }
jito-searcher-client = { path = "./clients/searcher_client" }


anyhow = "1.0.79"
backoff = { version = "0.4.0", features = ["tokio"] }

tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }
tonic-health = "0.10.2"

histogram = "0.6.9"
rand = "0.8.5"

http = "1.0.0"
thiserror = "1.0.29"
bytes = "1.5.0"

clap = { version = "4.3.0", features = ["derive"] }
bs58 = "0.4.0"
chrono = "0.4.19"

colored = "2.0.0"
async-recursion = "1.1.1"
indicatif = "0.17.8"


num-traits = "0.2.18"
num-derive = "0.4.2"


console = "0.15.8"
dotenv = "0.15.0"


[workspace]
members = [
    "clients/yellowstone-grpc-proto",
    "clients/jito_protos",
    "clients/searcher_client",
]
resolver = "2"


[workspace.dependencies]
jito-geyser-protos = { path = "./clients/proto", version = "1.17.20" }
prost = "0.12.1"
prost-types = "0.12.1"

protobuf-src = "1.1.0+21.5"
tonic-build = "0.11.0"
